# minIni-nx

./: .gitignore  CMakeLists.txt  Makefile
include/: minGlue-nx.h  minGlue.h  minIni.h
source/: minGlue-nx.c  minIni.c
